Virtual path prefix for static

--- a/views/content.pug
+++ b/views/content.pug
@@ -4,5 +4,5 @@ title Simple Template
 body
 include ./header.pug
 h3 I'm the main content
-img(src = "/pic.jpg" alt = "Test picture" width="200")
+img(src = "/pictures/pic.jpg" alt = "Test picture" width="200")
 include ./footer.pug
